<?xml version="1.0"?>
<package format="2">
	<name>yaskawa_ethernet</name>
	<version>0.2.2</version>
	<description>Ethernet client for the Yaskawa high-speed ethernet server</description>
	<license>BSD-3-Clause</license>

	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>
	<author email="maarten@de-vri.es">Maarten de Vries</author>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>asio</depend>
	<depend>yaml-cpp</depend>
	<depend>eigen</depend>

	<depend>estd</depend>
</package>
